--- a/app/src/main/res/layout/item_select_friend.xml
+++ b/app/src/main/res/layout/item_select_friend.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_margin="5dp">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,12 +26,15 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"/>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <cn.refactor.library.SmoothCheckBox
         android:id="@+id/checkBox"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_alignTop="@id/tvFriendName"/>
+        android:layout_alignTop="@id/tvFriendName"
+        android:clickable="true"
+        app:color_checked="@color/checked_green"/>
 
 </RelativeLayout>
