--- a/app/src/main/res/layout/content_create_new_group.xml
+++ b/app/src/main/res/layout/content_create_new_group.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_gradient"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
         android:id="@+id/rlHeader">
 
         <com.wrapp.floatlabelededittext.FloatLabeledEditText
